Revert "Refactor product DTOs and implement update/delete service methods"
This reverts commit 650f78843ae488d2bd2361bd8dd43c4efc93815b.